[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "sync"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenvy = "0.15"
redis = { version = "0.23", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] }
anyhow = "1.0"
once_cell = "1.18"
mongodb = { version = "2.7.1", features = ["tokio-runtime", "bson-chrono-0_4"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
